# zelus

./: .gitignore  AUTHORS  BUGS  LICENSE  META  Makefile  README.md  TODO  WORKING_NOTES  anonymous.make  config.in  config.ml  configure  dune  dune-project  probzelus.docker  readme.md  readme.txt  todo  typage-v3.txt  zelus-gtk.opam  zelus.docker  zelus.opam  zrun.opam  ztypes_new.ml
compiler/: .merlin  Makefile  dune
compiler/analysis/: causal.ml  causality.ml  init.ml  initialization.ml  newcausal.ml  newcausality.ml
compiler/dual/: dualize.ml
compiler/gencode/: copy.ml  copy.orphan.ml  copystate.ml  cssa.ml  inout.ml  inout.old.ml  inout.txt  inout2.ml  inout2.orphan.ml  o2mlprinter.ml  oaux.ml  obc.ml  obc2array.ml  ocamlprinter.ml  oprinter.ml  pythonprinter.ml  sol.ml  to_muf.ml  translate.ml
compiler/global/: debug.ml  defcaus.ml  definit.ml  deftypes.ml  deps_tools.ml  genames.ml  global.ml  graph.ml  hybrid.ml  ident.ml  initial.ml  lident.ml  location.ml  misc.ml  modules.ml  pcaus.ml  pinit.ml  pp_tools.ml  printer.ml  ptypes.ml  scoping.ml  state.ml  util.ml  vars.ml  write.ml  zaux.ml  zelus.ml  zident.ml  zlident.ml  zlmisc.ml  zmisc.ml
compiler/main/: compiler.ml  fixstep.ml  main.ml  simulator.ml  zeluc.ml  zlsbuild.ml  zlsdep.ml
compiler/muf/: muf.ml  muf_flatten.ml  muf_gencode.ml  muf_libs_name.ml  muf_rename.ml  muf_rewrites.ml  muf_to_python.ml  muf_utils.ml
compiler/parsing/: depend.ml  lexer.mll  lexer.mll.new  parser.mly  parser.mly.new  parsetree.ml  zdepend.ml  zldepend.ml  zlexer.mll  zllexer.mll  zlparser.mly  zlparsetree.ml  zls_parsetree.ml  zparser.mly  zparsetree.ml
compiler/rewrite/: activate.ml  add_copy_for_last.ml  aform.ml  automata.ml  complete.ml  completion.ml  control.ml  copy.ml  cost.ml  cse.ml  cut.ml  deadcode.ml  delays.ml  deltadelayfun.ml  deltadelaytuple.ml  dependences.ml  disc.ml  encore.ml  goagain.ml  horizon.ml  inline.ml  instantaneousfun.ml  last.ml  letin.ml  markfunctions.ml  ode.ml  odesynchronous.ml  period.ml  periodz.ml  pre.ml  present.ml  proba.ml  reduce.ml  remove_last_in_patterns.ml  reset.ml  schedule.ml  shared.ml  static.ml  unclock.ml  unsafe.ml  (+4 more)
compiler/semantics/: coiteration.ml  monad.ml  primitives.ml  sdebug.ml  value.ml
compiler/typing/: interface.ml  kind.ml  matching.ml  patternsig.ml  total.ml  typerrors.ml  types.ml  typing.ml  zlmatching.ml  zltypes.ml  ztypes.ml
compiler/verif/: lmm.ml  match2condition.ml  plmm.ml  tuple2record.ml  tuple2record.orphan.ml  z3refinement.ml  z3verif.ml  zlus2lmm.ml
examples/airtraffic/: Makefile  a330.ml  airtraffic.ls  airtraffic.zls  airtrafficgui.ml  airtrafficgui.mli  airtrafficgui.zli  airtrafficrot.zls  airtraffictpb.ls  dune  readme.md  simplevector.ml  svgtoocaml.py
examples/backhoe/: Makefile  backhoecontrol.ls  backhoecontrol.zls  backhoedyn.zls  backhoegui.lsi  backhoegui.ml  backhoegui.mli  backhoegui.zli  dune  readme.md
examples/bangbang/: Makefile  bangbang.zls  bangbang_main.ml  dune  readme.md  spec.zls  spec_main.ml  spec_plot.ml
examples/beginner/: Makefile  abro.ls  abro.zls  button.zls  dune  hermes.zls  switch.zls
examples/billiard/: Makefile  billiard1d.zls  billiard_ex1.zls  billiard_ex2.zls  billiard_ex3.zls  billiard_ex4.zls  billiard_ex4b.zls  billiard_ex5.zls  doityourself.zls  dune  problems.ls  problems.zls  problems2.ls  problems2.zls
examples/bouncingball/: Makefile  autoball.ls  autoball.zls  ball.ls  ball.ml  ball.zci  ball.zls  dune  flatball.ml  flatball.zci  flatball.zls  flatball_main.ml  flatworld.ml  flatworld.mli  flatworld.zci  readme.md  show.mli  show.zli  showball.lsi  showball.ml  showball.mli  showball.zci  showball.zli  spec.zls  test_main.ml  world.ml  world.zli
examples/boxes/: Makefile  boxes.zls  dune  showboxes.ml  showboxes.zli
examples/cantharide/: Makefile  cantharide.mdl  cantharide1.zls  cantharide2.ls  cantharide2.zls  cantharide3.zls  cantharide4.ls  cantharide_ifthen.mdl  dune  fly.zls
examples/clutch_engagement/: Makefile  clutch.plt  clutch_diff.ls  clutch_diff.zls  clutch_gui.ls  clutch_gui.zls  clutch_log.ls  clutch_log.zls  clutch_model.zls  dune  notes.txt
examples/controlled_mass_spring/: Makefile  controlled_mass_spring.zls  dune
examples/cradle/: Makefile  cradle2.zls  cradle2bool.zls  cradle3.zls  cradle3bool.ls  cradle3bool.zls  cradle3soft.ls  cradle3soft.zls  cradle4bool.zls  cradle_modular.ls  cradle_modular.zls  dune  notes_cradle.text
examples/fuelcontroller/: .gitignore  Makefile  README  dumpnode.zls  dune  fuelc.zli  fuelc.zls  fuelc_common.zli  fuelc_common.zls  fuelc_data.ml  fuelc_data.mli  fuelc_data.zli  fuelc_engine.zli  fuelc_engine.zls  fuelc_logic.ls  fuelc_logic.zli  fuelc_logic.zls  fuelc_subsys.ls  fuelc_subsys.zli  fuelc_subsys.zls  library.ls  library.zli  library.zls  lookup.ml  lookup.mli  lookup.zli  mlmisc.lsi  mlmisc.ml  mlmisc.zli
examples/heater/: Makefile  constants.zls  dune  heat.zls  heatc.zls  heatdc.zls  io.zls  main.ml  main_heat.zls  main_heatc.zls  main_heatdc.zls  observers.ml  observers.zls  test_heat.zls
examples/horloge/: Makefile  draw.ml  draw.mli  draw.zli  dune  horloge.zls  readme.md
examples/lane_change_maneuver/: Makefile  README.md  constants.ml  constants.zli  draw.ml  draw.zli  dune  interior.zls  leader.zls  merging.zls  noise.zls  rear.zls  simu.zls  vehicle.zls
examples/misc/: Makefile  count.zls  derivative.zls  discontinuity.zls  div_by_zero.zls  dune  euler_forward_error.zls  hardstop_integr.zls  heatingh20.zls  hybridaut.zls  input_window.zls  instable.zls  int_of_float.zls  integrales_compliquees.zls  khalil.zls  match_seesaw.ls  match_seesaw.zls  ode_non_lipshitz.zls  sincos.zls  sliding.zls  (+10 more)
src/: Makefile  dune
test/: .gitignore  Makefile  check  check.ml  color  dune  test.ml  test_runner.ml
tests/: Makefile  dune  zwritetest.ml
zrun/: Makefile  Makefile.old  coiteration.ml  combinatorial.ml  dune  error.ml  eval.ml  find.ml  fix.ml  forloop.ml  genv.ml  match.ml  monad.ml  output.ml  primitives.ml  primitives.ml.monad  sdebug.ml  smisc.ml  static.ml  value.ml  zrun.ml
(+2357 files in other folders)
