opam-version: "2.0"
name: "zelus-gtk"
version: "2.1"
synopsis: "A synchronous language with ODEs"
authors: ["Marc Pouzet <marc.pouzet@ens.fr>"]
maintainer: ["Marc Pouzet <marc.pouzet@ens.fr>"]
homepage: "http://zelus.di.ens.fr"
doc: "http://zelus.di.ens.fr/man/"
bug-reports: "https://gitlab.inria.fr/parkas/zelus/-/issues"
depends: [
  "zelus" "lablgtk"
]
depopts: ["glmlite"]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune" "build" "-p" name "-j" jobs
    "@install"
  ]
]
dev-repo: "git+https://github.com/INRIA/zelus.git"
