opam-version: "2.0"
synopsis: "A synchronous language with ODEs"
authors: [
  "Timothy Bourke <timothy.bourke@inria.fr>"
  "Marc Pouzet <marc.pouzet@ens.fr>"
  ]
maintainer: ["Marc Pouzet <marc.pouzet@ens.fr>"]
homepage: "http://zelus.di.ens.fr"
doc: "http://zelus.di.ens.fr/man/"
bug-reports: "https://github.com/INRIA/zelus/issues"
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "2.6"}
  "menhir"
  "ppx_deriving"
]
depopts: ["sundialsml"]
build: [
  ["dune" "subst"] {dev}
  [
    "./configure"
    "--prefix" prefix
  ]
  [
    "dune" "build" "-p" name "-j" jobs
    "@install"
  ]
]
dev-repo: "git+https://github.com/INRIA/zelus.git"