;(executable 
;   (name test)
;   (modes byte exe)
;   (modules test)
;   (promote (until-clean)))

(rule
 (copy %{project_root}/lib/std/stdlib.zli stdlib.zli))

(test
 (name test)
 (modules test)
 (deps (glob_files good/*.zls) (glob_files bad/*.zls) stdlib.zli)
 (libraries alcotest zlcompilerlibs))