(executable
 (name zruntest)
 (modes (byte exe))
  (libraries zelus.zlcompilerlibs zelus.zlrunlibs alcotest)
  (promote (until-clean)))

;(test
; (name zruntest)
; (modes (byte exe))
;  (libraries zelus.zlcompilerlibs zelus.zlrunlibs alcotest)
;  (deps (glob_files good/*.zls) (glob_files bad/*.zls) stdlib.zli))
  
