(executable
 (name zrun)
  (modes (byte exe))
  (libraries zelus.zlcompilerlibs zelus.zlrunlibs)
  ; copy in the current dir
  (modules zrun)
  (promote (until-clean)))

(library
  (name zlrunlibs)
  (public_name zelus.zlrunlibs)
  (wrapped false)
  (libraries zelus.zlcompilerlibs)
  (modules :standard \ zrun))
  
