(rule
 (targets problems2.ml problems2_main.ml)
 (deps (:zl problems2.zls))
 (action (run zeluc -gtk2 -s main -o problems2_main %{zl})))

(rule
 (targets problems.ml problems_main.ml)
 (deps (:zl problems.zls))
 (action (run zeluc -gtk2 -s main -o problems_main %{zl})))

(rule
 (targets doityourself.ml doityourself_main.ml)
 (deps (:zl doityourself.zls))
 (action (run zeluc -gtk2 -s main -o doityourself_main %{zl})))

(executables
  (names problems2_main problems_main doityourself_main)
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))