(env (dev (flags (:standard -w -a))))

(rule
 (targets ball.ml ball_main.ml ball.zci)
 (deps (:zl ball.zls) showball.zli world.zli (package zelus))
 (action (run zeluc -deps -s main -o ball_main %{zl})))

(rule
 (targets autoball.ml autoball_main.ml)
 (deps (:zl autoball.zls) showball.zli world.zli ball.zls (package zelus) (sandbox always))
 (action (run zeluc -deps -s main -o autoball_main %{zl})))

(rule
 (targets flatball.ml flatball_main.ml)
 (deps (:zl flatball.zls) showball.zli flatworld.zli ball.zls (package zelus) (sandbox always))
 (action (run zeluc -deps -s main -o flatball_main %{zl})))

(executables
  (names ball_main autoball_main flatball_main)
  (modules_without_implementation show)
  (libraries graphics zelus)
  (promote (until-clean)))