(env (dev (flags (:standard -w -a))))

(rule
 (targets controlled_mass_spring.ml controlled_mass_spring_main.ml)
 (deps (:zl controlled_mass_spring.zls) (package zelus))
 (action (run zeluc -s main -o controlled_mass_spring_main %{zl})))

(executable
  (name controlled_mass_spring_main)
  (libraries graphics zelus)
  (promote (until-clean)))