(rule
 (targets cradle_modular.ml cradle_modular_main.ml)
 (deps (:zl cradle_modular.zls))
 (action (run zeluc -gtk2 -s main -o cradle_modular_main %{zl})))

(rule
 (targets cradle2.ml cradle2_main.ml)
 (deps (:zl cradle2.zls))
 (action (run zeluc -gtk2 -s main -o cradle2_main %{zl})))

(rule
 (targets cradle2bool.ml cradle2bool_main.ml)
 (deps (:zl cradle2bool.zls))
 (action (run zeluc -gtk2 -s main -o cradle2bool_main %{zl})))

(rule
 (targets cradle3.ml cradle3_main.ml)
 (deps (:zl cradle3.zls))
 (action (run zeluc -gtk2 -s main -o cradle3_main %{zl})))

(rule
 (targets cradle3bool.ml cradle3bool_main.ml)
 (deps (:zl cradle3bool.zls))
 (action (run zeluc -gtk2 -s main -o cradle3bool_main %{zl})))

(rule
 (targets cradle3soft.ml cradle3soft_main.ml)
 (deps (:zl cradle3soft.zls))
 (action (run zeluc -gtk2 -s main -o cradle3soft_main %{zl})))

(rule
 (targets cradle4bool.ml cradle4bool_main.ml)
 (deps (:zl cradle4bool.zls))
 (action (run zeluc -gtk2 -s main -o cradle4bool_main %{zl})))

(executables
  (names cradle_modular_main cradle2_main cradle2bool_main cradle3_main cradle3bool_main cradle3soft_main cradle4bool_main)
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))