(rule
 (targets 
   fuelc.ml  fuelc_engine.ml  fuelc_subsys.ml  fuelc_common.ml  fuelc_logic.ml  library.ml
   fuelc.zci fuelc_engine.zci fuelc_subsys.zci fuelc_common.zci fuelc_logic.zci library.zci mlmisc.zci)
 (deps (:zl fuelc.zls))
 (action (run zeluc -deps -gtk2 %{zl})))

(rule
 (targets basicfuel.ml)
 (deps (:zl fuelc.zls) (sandbox always)
   fuelc_engine.zci fuelc_subsys.zci fuelc_common.zci fuelc_logic.zci library.zci mlmisc.zci)
 (action (run zeluc -gtk2 -s basicfuel %{zl})))

(rule
 (targets mapfail.ml)
 (deps (:zl fuelc.zls) (sandbox always)
   fuelc_engine.zci fuelc_subsys.zci fuelc_common.zci fuelc_logic.zci library.zci mlmisc.zci)
 (action (run zeluc -gtk2 -s mapfail %{zl})))

(executables
  (names basicfuel mapfail)
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))