(env (dev (flags (:standard -w -a))))

(rule
 (targets basicfuel.ml fuelc.ml fuelc_engine.ml fuelc_common.ml fuelc_subsys.ml fuelc_logic.ml library.ml) 
 (deps (:zl fuelc.zls)
   fuelc_engine.zls fuelc_subsys.zls fuelc_common.zls fuelc_logic.zls library.zli lookup.zli mlmisc.zli library.zls (package zelus) (package zelus-gtk))
 (action (run zeluc -deps -gtk2 -s basicfuel %{zl})))

(rule
 (targets mapfail.ml)
 (deps (:zl fuelc.zls) (sandbox always)
   fuelc_engine.zls fuelc_subsys.zli fuelc_common.zli fuelc_logic.zli library.zli lookup.zli mlmisc.zli (package zelus) (package zelus-gtk))
 (action (run zeluc -deps -gtk2 -s mapfail %{zl})))

(executables
  (names basicfuel mapfail)
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))