(env (dev (flags (:standard -w -a))))

(rule
 (targets horloge.ml horloge_main.ml)
 (deps (:zl horloge.zls) draw.zli (package zelus))
 (action (run zeluc -deps -s main -sampling 0 -o horloge_main %{zl})))

(executable
  (name horloge_main)
  (libraries unix graphics zelus)
  (promote (until-clean)))