(rule
 (targets count.ml count_main.ml)
 (deps (:zl count.zls))
 (action (run zeluc -gtk2 -s main -o count_main %{zl})))

(rule
 (targets derivative.ml derivative_main.ml)
 (deps (:zl derivative.zls))
 (action (run zeluc -gtk2 -s main -o derivative_main %{zl})))

(rule
 (targets discontinuity.ml discontinuity_main.ml)
 (deps (:zl discontinuity.zls))
 (action (run zeluc -gtk2 -s main -o discontinuity_main %{zl})))

(rule
 (targets div_by_zero.ml div_by_zero_main.ml)
 (deps (:zl div_by_zero.zls))
 (action (run zeluc -gtk2 -s main -o div_by_zero_main %{zl})))

(rule
 (targets euler_forward_error.ml euler_forward_error_main.ml)
 (deps (:zl euler_forward_error.zls))
 (action (run zeluc -gtk2 -s main -o euler_forward_error_main %{zl})))

(rule
 (targets hardstop_integr.ml hardstop_integr_main.ml)
 (deps (:zl hardstop_integr.zls))
 (action (run zeluc -gtk2 -s main -o hardstop_integr_main %{zl})))

(rule
 (targets heatingh20.ml heatingh20_main.ml)
 (deps (:zl heatingh20.zls))
 (action (run zeluc -gtk2 -s main -o heatingh20_main %{zl})))

(rule
 (targets hybridaut.ml hybridaut_main.ml)
 (deps (:zl hybridaut.zls))
 (action (run zeluc -gtk2 -s main -o hybridaut_main %{zl})))

(rule
 (targets input_window.ml input_window_main.ml)
 (deps (:zl input_window.zls))
 (action (run zeluc -gtk2 -s main -o input_window_main %{zl})))

(rule
 (targets instable.ml instable_main.ml)
 (deps (:zl instable.zls))
 (action (run zeluc -gtk2 -s main -o instable_main %{zl})))

; (rule
;  (targets int_of_float.ml int_of_float_main.ml)
;  (deps (:zl int_of_float.zls))
;  (action (run zeluc -gtk2 -s main -o int_of_float_main %{zl})))

(rule
 (targets integrales_compliquees.ml integrales_compliquees_main.ml)
 (deps (:zl integrales_compliquees.zls))
 (action (run zeluc -gtk2 -s main -o integrales_compliquees_main %{zl})))

(rule
 (targets khalil.ml khalil_main.ml)
 (deps (:zl khalil.zls))
 (action (run zeluc -gtk2 -s main -o khalil_main %{zl})))

; (rule
;  (targets match_seesaw.ml match_seesaw_main.ml)
;  (deps (:zl match_seesaw.zls))
;  (action (run zeluc -gtk2 -s main -o match_seesaw_main %{zl})))

(rule
 (targets ode_non_lipshitz.ml ode_non_lipshitz_main.ml)
 (deps (:zl ode_non_lipshitz.zls))
 (action (run zeluc -gtk2 -s main -o ode_non_lipshitz_main %{zl})))

(rule
 (targets sincos.ml sincos_main.ml)
 (deps (:zl sincos.zls))
 (action (run zeluc -gtk2 -s main -o sincos_main %{zl})))

; (rule
;  (targets sliding.ml sliding_main.ml)
;  (deps (:zl sliding.zls))
;  (action (run zeluc -gtk2 -s main -o sliding_main %{zl})))

(rule
 (targets sqrt.ml sqrt_main.ml)
 (deps (:zl sqrt.zls))
 (action (run zeluc -gtk2 -s main -o sqrt_main %{zl})))

(rule
 (targets suspend01.ml suspend01_main.ml)
 (deps (:zl suspend01.zls))
 (action (run zeluc -gtk2 -s main -o suspend01_main %{zl})))

(rule
 (targets tabledep.ml tabledep_main.ml)
 (deps (:zl tabledep.zls))
 (action (run zeluc -gtk2 -s main -o tabledep_main %{zl})))

(rule
 (targets updown.ml updown_main.ml)
 (deps (:zl updown.zls))
 (action (run zeluc -gtk2 -s main -o updown_main %{zl})))

(rule
 (targets water.ml water_main.ml)
 (deps (:zl water.zls))
 (action (run zeluc -gtk2 -s main -o water_main %{zl})))

(rule
 (targets ysquared.ml ysquared_main.ml)
 (deps (:zl ysquared.zls))
 (action (run zeluc -gtk2 -s main -o ysquared_main %{zl})))

(rule
 (targets zero.ml zero_main.ml)
 (deps (:zl zero.zls) unsafe.zli)
 (action (run zeluc -gtk2 -deps -s main -o zero_main %{zl})))

(executables
  (names count derivative discontinuity div_by_zero euler_forward_error hardstop_integr heatingh20 hybridaut input_window instable integrales_compliquees khalil ode_non_lipshitz sincos sqrt suspend01 tabledep updown water ysquared zero
  ;int_of_float match_seesaw sliding 
  )
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))







